--- a/Proposal_groupXXX.ipynb
+++ b/Proposal_groupXXX.ipynb
@@ -36,11 +36,10 @@
     "\n",
     "Hopefully your team is at least this good. Obviously you should replace these with your names.\n",
     "\n",
-    "- Pelé\n",
-    "- Diego Maradonna\n",
-    "- Johan Cruyff\n",
-    "- Roberto Carlos\n",
-    "- Franz Beckenbaur"
+    "- Xunzhi He\n",
+    "- Cassidy Lu\n",
+    "- William Zhao\n",
+    "- Huiyi He"
    ]
   },
   {
@@ -1885,7 +1884,19 @@
     "\n",
     "If you know details already, describe how (e.g., library used, function calls) you plan to implement the solution in a way that is reproducible.\n",
     "\n",
-    "If it is appropriate to the problem statement, describe a benchmark model<a name=\"sota\"></a>[<sup>[3]</sup>](#sotanote) against which your solution will be compared. "
+    "If it is appropriate to the problem statement, describe a benchmark model<a name=\"sota\"></a>[<sup>[3]</sup>](#sotanote) against which your solution will be compared. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "We aim to optimize the book discovery process by designing a personalized book recommendation system. This system addresses the significant challenge readers encounter when navigating the extensive selection of books across diverse genres and authors. Utilizing clustering algorithms such as K-means for our baseline model and Gaussian Mixture Models (GMM) for an advanced approach, we intend to categorize books into clusters $C_i$ based on features $F = \\{f_1, f_2, \\ldots, f_n\\}$, which include genre, authorship, reader ratings, and descriptions. The strategy is directed at minimizing the search effort for users by aligning recommendations with their preferences and reading history. The effectiveness of our system is quantitatively measured through metrics such as precision $\\frac{TP}{TP + FP}$, recall $\\frac{TP}{TP + FN}$, and the F1 score $2 \\times \\frac{\\text{precision} \\times \\text{recall}}{\\text{precision} + \\text{recall}}$, where $TP$, $FP$, and $FN$ represent true positives, false positives, and false negatives, respectively.\n",
+    "\n",
+    "The system's performance is further measurable through engagement metrics such as click-through rate (CTR) $= \\frac{\\text{Number of clicks}}{\\text{Number of recommendations shown}}$, conversion rate $= \\frac{\\text{Number of conversions}}{\\text{Total interactions}}$, and user satisfaction scores, providing objective measures of how well the recommendations correspond to user preferences. This problem's replicability across various demographics, platforms, and databases underscores its ubiquity in improving user experiences in digital book ecosystems.\n",
+    "\n",
+    "By systematically collecting and analyzing user data $D = \\{d_1, d_2, \\ldots, d_m\\}$ regarding reading habits, ratings, and preferences, we can iteratively refine our models to ensure that the recommendations $R$ remain pertinent and captivating for a broad audience over time, employing statistical and machine learning techniques to adapt and evolve the recommendation system in response to changing user behaviors and preferences.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1927,10 +1938,17 @@
    "metadata": {},
    "source": [
     "Put things here that cement how you will interact/communicate as a team, how you will handle conflict and difficulty, how you will handle making decisions and setting goals/schedule, how much work you expect from each other, how you will handle deadlines, etc...\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+    "* *Open and Respectful Communication* \n",
+    "\n",
+    "Emphasize open and respectful communication, ensuring every team member feels heard and valued. Utilize agreed-upon platforms like email or Slack for regular dialogue. Address disagreements through a clear conflict resolution process that prioritizes understanding and compromise, starting with direct conversations and, if necessary, involving mediation or escalation. This approach aims to maintain a positive team environment focused on collective goals.\n",
+    "\n",
+    "* *Collaborative Decision making and equitable work*\n",
+    "\n",
+    "Decisions affecting the team or project will be made collaboratively, aiming for consensus and resorting to a democratic vote if needed. Goals are set together, considering each member's strengths and team capabilities. Work is distributed fairly, with attention to skills, interests, and workload, ensuring balance. Regular check-ins prevent overload and underutilization, fostering a cooperative and productive environment.\n",
+    "\n",
+    "* *Adherence to Deadlines*\n",
+    "\n",
+    "Deadlines are set with the agreement of all team members, considering realistic assessments of time and resources required. Proactive communication is expected if a team member anticipates difficulty meeting a deadline, allowing the team to adjust plans or redistribute work as necessary.\n"
    ]
   },
   {
@@ -1948,13 +1966,13 @@
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 1/20  |  1 PM |  Brainstorm topics/questions (all)  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic (Pelé) | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets (Beckenbaur)  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data ,do some EDA (Maradonna) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin programming for project (Cruyff) | Discuss/edit project code; Complete project |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Carlos)| Discuss/edit full project |\n",
-    "| 3/19  | Before 11:59 PM  | NA | Turn in Final Project  |"
+    "| 1/15  |  4 PM |  Brainstorm topics/questions (all)  | Destribute the work of project proposal; Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
+    "| 1/20  |  4 PM |  Do background research on topic | Discuss ideal dataset and ethics; Finish and revise project proposal; Review all the works have been done; Decide what to do next | \n",
+    "| 1/26  | 11 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
+    "| 3/1  | 2 PM  | Import & Wrangle Data ,do some EDA  | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
+    "| 3/7  | 12 PM  | Finalize wrangling/EDA; Begin programming for project | Discuss/edit project code; Complete project |\n",
+    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion | Discuss/edit full project |\n",
+    "| 3/19  | Before 11:59 PM  | The whole project | Turn in Final Project  |"
    ]
   },
   {
