added data description

--- a/Proposal_groupXXX.ipynb
+++ b/Proposal_groupXXX.ipynb
@@ -95,6 +95,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data\n",
+    "We would like to use total of two dataset to create a recommendation system of books for the users.\n",
+    "Information regarding data:\n",
+    "- link of the data: https://mengtingwan.github.io/data/goodreads#datasets<a name=\"data_ref1\"></a>[<sup>[4]</sup>](#cite_note-1)<a name=\"data_ref2\"></a>[<sup>[5]</sup>](#cite_note-1)\n",
+    "- The first file we use as our dataset is goodreads_book_genres_initial.json.gz file containing all the book information for the goodreads website. It has total of 2360655 rows and 2 columns: book_id and genres. Each of the row correspond to one book. The book_id is a string of numbers which each of the id is unique in this dataframe. The column genres is a dictionary where the key is a string of genre and the value is an integer which is unknow for us what the integer represent since the dataset description did not specify what the integer represent.\n",
+    "- The second file is goodreads_interactions.csv file containing the reader information. It has total of 228648342 rows and 5 columns. The first column is user_id where each unique user has one unqiue id using a string of numbers to represent. The second column is book_id which will match the book_id from the first goodreads_book_genres's book_id. The third column is_read contain a boolean value 1 and 0. 1 represent the reader is currently reading the book and 0 otherwise. The 4th column rating uses an integer from range 0-5 to represent the user rating of a book. The last column is_reviewed also contain a boolean value 1 and 0. 1 represent the reader have left a review for this book and 0 otherwise.\n",
+    "- We will preform some special handling for both of the data. Since both data are huge and in order to prevent dead kernel while cleaning the dataframe and training the model, we have reduce the size of the goodreads_book_genres dataframe to 800000 books. We have also reduced the size of goodreads_interactions.csv to the first 200000 rows. We would merge those two dataframe using left mrege using book_id columns by merging on to the user dataframe(goodreads_interactions.csv). We would then filter out all the np.nan values in the dataframe by deleting the row that contains any np.nan values. For the rating column, we might want to standardize it to see if there are user giving extremly high or low rating. We would then change the genres into a list of strings representing the genre the book belongs in. Later we would use MultiLabelBinarizer from sklearn to one-hot encode the genre list for each book. We would also groupby the dataframe by user_id and standardize the number of book the read for each genre."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -111,18 +124,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# file path for cassidy \n",
+    "base_path = '../data/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "# load in json file \n",
-    "with gzip.open('goodreads_book_genres_initial.json.gz', 'rt', encoding = 'utf-8') as f:\n",
+    "with gzip.open(base_path + 'goodreads_book_genres_initial.json.gz', 'rt', encoding = 'utf-8') as f:\n",
     "    df = pd.read_json(f, lines = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -264,14 +289,14 @@
        "[200000 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load in csv file with first 200000 row \n",
-    "user_df = pd.read_csv('goodreads_interactions.csv',nrows=200000)\n",
+    "user_df = pd.read_csv(base_path + 'goodreads_interactions.csv',nrows=200000)\n",
     "user_df"
    ]
   },
@@ -1982,7 +2007,9 @@
     "# Footnotes\n",
     "<a name=\"lorenznote\"></a>1.[^](#lorenz): Lorenz, T. (9 Dec 2021) Birds Aren’t Real, or Are They? Inside a Gen Z Conspiracy Theory. *The New York Times*. https://www.nytimes.com/2021/12/09/technology/birds-arent-real-gen-z-misinformation.html<br> \n",
     "<a name=\"admonishnote\"></a>2.[^](#admonish): Also refs should be important to the background, not some randomly chosen vaguely related stuff. Include a web link if possible in refs as above.<br>\n",
-    "<a name=\"sotanote\"></a>3.[^](#sota): Perhaps the current state of the art solution such as you see on [Papers with code](https://paperswithcode.com/sota). Or maybe not SOTA, but rather a standard textbook/Kaggle solution to this kind of problem\n"
+    "<a name=\"sotanote\"></a>3.[^](#sota): Perhaps the current state of the art solution such as you see on [Papers with code](https://paperswithcode.com/sota). Or maybe not SOTA, but rather a standard textbook/Kaggle solution to this kind of problem<br>\n",
+    "<a name=\"data_ref1\"></a>4.[^](#data_ref1) Mengting Wan, Julian McAuley, \"Item Recommendation on Monotonic Behavior Chains\", in RecSys'18.<br>\n",
+    "<a name=\"data_ref2\"></a>5.[^](#data_ref2) Mengting Wan, Rishabh Misra, Ndapa Nakashole, Julian McAuley, \"Fine-Grained Spoiler Detection from Large-Scale Review Corpora\", in ACL'19.<br>\n"
    ]
   },
   {
