--- a/FinalProject_groupXXX.ipynb
+++ b/FinalProject_groupXXX.ipynb
@@ -2101,7 +2101,7 @@
     "\n",
     "### Conclusion\n",
     "\n",
-    "Reiterate your main point and in just a few sentences tell us how your results support it. Mention how this work would fit in the background/context of other work in this field if you can. Suggest directions for future work if you want to."
+    "Our project faces not just technical challenges but also ethical and privacy concerns, notably the potential for users to feel surveilled by the use of their ebook shelf data for recommendations. Balancing personalization with privacy is crucial. To tackle these issues, we're committing to transparency about our system's capabilities and its limitations, including addressing any dataset biases. We're also working on diversifying our data to better capture the wide range of reading preferences and behaviors, all while prioritizing user privacy and autonomy by adhering to data protection best practices. Our goal is to create a recommendation system that's not just smart and useful but also respectful and trustworthy, ensuring user trust and satisfaction by being ethically responsible from the ground up.\n"
    ]
   },
   {
